--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
 
 <head>
@@ -12,9 +12,10 @@
 
 <body>
   <div id="app"></div>
-  <!-- built files will be auto injected -->
   <!-- 引入融云服务的js -->
   <script src="https://cdn.ronghub.com/RongIMLib-2.2.5.min.js"></script>
+  <!-- 引入exif.js,用来判断照片信息 -->
+  <script type="text/javascript" src="vendors/exif-js/exif-js" defer></script>
 </body>
 
 </html>
